recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:22: error: ';' expected but ')' found.
  squareSide(levels-1, length/3))
                                ^